--- a/Client/src/components/NavBar/Navbar.module.css
+++ b/Client/src/components/NavBar/Navbar.module.css
@@ -3,16 +3,14 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
-    /* justify-content: space-evenly; */
-    justify-content: space-between;
-    max-width: 768px;
+    max-width: 400px;
 }
 
-@media screen and (min-width: 947px) {
+@media screen and (min-width: 800px) {
     .navContainer {
-        width: 100%;
-        max-width: 90%;
+        max-width: none;
+        margin: 0;
+        margin-left: 1.5em;
     }
 }
