--- a/Client/src/components/Hamburguer/HamburgerMenu.module.css
+++ b/Client/src/components/Hamburguer/HamburgerMenu.module.css
@@ -1,41 +1,40 @@
-
 .menuIcon {
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    transition: transform 0.3s;
-  }
-  
-  .bar {
-    width: 30px;
-    height: 3px;
-    background-color: #333;
-    margin: 3px 0;
-    transition: transform 0.3s;
-  }
-  
-  .open .bar:first-child {
-    transform: translateY(10px) rotate(45deg);
-  }
-  
-  .open .bar:last-child {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-  
-  .open .bar:nth-child(2) {
-    opacity: 0;
-  }
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
 
-  .hamburgerMainContainer {
-    z-index: 2;
-    position: relative;
-  }
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: #333;
+  margin: 3px 0;
+  transition: transform 0.3s;
+}
 
+.open .bar:first-child {
+  transform: translateY(10px) rotate(45deg);
+}
 
-  .hamburgerBtnsContainer{
-    /* display: none; */
+.open .bar:last-child {
+  transform: translateY(-10px) rotate(-45deg);
+}
 
-    /* width: 50%;
-    height: 50%;
-    background-color: rgba(0, 0, 0, 0.5); */
-  }
+.open .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburgerMainContainer {
+  z-index: 2;
+  position: relative;
+}
+
+.hamburgerBtnsContainer {
+  display: none;
+}
+
+.showHamburgerBtns {
+  display: block;
+}
+
