--- a/Client/src/components/Hamburguer/HamburgerMenu.module.css
+++ b/Client/src/components/Hamburguer/HamburgerMenu.module.css
@@ -1,7 +1,7 @@
 .menuIcon {
+  /* position: absolute; */
   display: flex;
   flex-direction: column;
-  cursor: pointer;
   transition: transform 0.3s;
 }
 
@@ -35,6 +35,33 @@
 }
 
 .showHamburgerBtns {
-  display: block;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  height: 100vh;
+  width: 70%;
+  right: 0;
+  background-color: red;
+}
+
+.linksMainContainer {
+  list-style: none;
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  gap: 1em;
+  border: 1px solid blue;
+}
+
+.linksContainer{
+  /* width: 3em; */
+  border: 1px solid green;
+  background: blue;
+}
+
+.links {
+  width: 100%;
 }
 
