--- a/Client/src/components/SearchBar/searchBar.module.css
+++ b/Client/src/components/SearchBar/searchBar.module.css
@@ -13,14 +13,15 @@
 
 .buttonsInputContainer{
     display: flex;
+    width: 100%;
     margin-right: .7em;
 }
 
 .inputBtns {
+    width: 100%;
+    max-width: 200px;
     background-color: #31087B;
-    border: none;
     border: 1px solid rgb(139, 223, 13);
     color: #fff;
-    text-align: center;
-    /* width: 100%; */
+    cursor: pointer;
 }
