checking innerwidth so the toggleMenu option doesn't change when the width is 800 or greater, adding hover on search and random btns

--- a/Client/src/components/SearchBar/searchBar.module.css
+++ b/Client/src/components/SearchBar/searchBar.module.css
@@ -24,4 +24,9 @@
     border: 1px solid rgb(139, 223, 13);
     color: #fff;
     cursor: pointer;
+    transition: .2s ease-in-out;
+
+    &:hover {
+        background: #26075f;
+    }
 }
