styles: aligning filters styles and making them responsive

--- a/Client/src/components/Favorites/Favorites.module.css
+++ b/Client/src/components/Favorites/Favorites.module.css
@@ -6,6 +6,11 @@
     flex-direction: column;
     gap: 2em;
 }
+
+.filtersContainer {
+    display: flex;
+    justify-content: center;
+}
 p {
     color: white;
     width: 90%;
